Fix related alignment

--- a/src/components/pages.css
+++ b/src/components/pages.css
@@ -177,6 +177,7 @@
     color: var(--color-blue);
     letter-spacing: .8px;
     padding-bottom: 5px;
+    margin-top: 8px;
 
     &::before {
       content: '';
